--- a/Ex1/src/main/AndroidManifest.xml
+++ b/Ex1/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,17 +13,32 @@
         android:supportsRtl="true"
         android:theme="@style/Ex1"
         tools:targetApi="31">
+
+        <!-- ✅ מפתח API של Google Maps -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCcjCx95eJwl-ZN5gKfOi5xnTUETrqK8GM" />
+
+        <!-- ✅ זה התפריט הראשי שיפתח ראשון -->
         <activity
-            android:name=".MainPlaying"
+            android:name=".MainMenuActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Ex1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity android:name=".HighScoresActivity" />
+
+        <!-- ❌ לא צריך intent-filter כאן -->
+        <activity
+            android:name=".MainPlaying"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Ex1" />
+    </application>
 </manifest>
